<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/dialogBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/createNewFolder" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/folderName"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCreateNewFolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="30"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelCreateFolder"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/fondo_text_view"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/darkGray" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <Button
            android:id="@+id/btnCreateNewFolder"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/fondo_text_view"
            android:gravity="center"
            android:text="@string/createNewFolder"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</LinearLayout>